--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -10,8 +10,9 @@ $main-black-trans: rgba(34, 34, 34, 0.3);
 $main-white: #f1f1f1;
 $sec-dark: #313131;
 $sec-color: #29d4c0;
-$sec-bg-color: #f6fbf6;
-$hl-color: #edfbed;
+$sec-color-title: #4a6365;
+$sec-bg-color: #eeffff;
+$hl-color: #b3fff6;
 $des-color: #868e96;
 
 // Font sizes
