--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,7 @@
   right: 0;
   background-color: $main-black;
   border-bottom: 1px solid $sec-dark;
+  z-index: 5;
 
   // Nav-large
 
@@ -190,5 +191,116 @@
         color: $sec-color;
       }
     }
+  }
+}
+
+.mw-container {
+  background-color: $sec-bg-color;
+  .mw-title {
+    padding-top: 100px;
+    text-align: center;
+    h2 {
+      display: inline-block;
+      font-weight: 700;
+      color: $sec-color-title;
+    }
+    h2.mw-t-sec {
+      padding: 10px;
+      background-color: $hl-color;
+      border-radius: 10px;
+      color: $sec-color;
+    }
+    p.mw-des {
+      margin-top: 10px;
+      display: block;
+      color: $des-color;
+    }
+  }
+}
+.cards-row {
+  padding-bottom: 100px;
+}
+.mw-card {
+  margin-top: 50px;
+  border-radius: 10px 10px 5px 5px;
+
+  .card-img {
+    img {
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.44);
+      aspect-ratio: 1 / 1;
+      border-radius: 10px 10px 5px 5px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  .card-title {
+    text-align: center;
+    h4 {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      font-size: $quote-size;
+      font-weight: 700;
+      color: $sec-color-title;
+    }
+    p {
+      font-size: $des-size;
+      color: $des-color;
+    }
+  }
+}
+.edu {
+  background: rgb(40, 134, 139);
+  background: linear-gradient(
+    90deg,
+    rgba(40, 134, 139, 1) 0%,
+    rgba(43, 171, 156, 1) 37%,
+    rgba(58, 183, 214, 1) 100%
+  );
+  .edu-row {
+    padding-top: 100px;
+    color: $main-white;
+    .edu-title {
+      h3 {
+        font-weight: 700;
+        font-size: $subh-size;
+      }
+      p {
+        display: block;
+        margin-top: 10px;
+        font-size: $par-size;
+      }
+    }
+    .edu-blocks {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 50px;
+      .edu-block {
+        width: 50%;
+        padding: 15px 0;
+        padding-right: 30px;
+        display: inline-block;
+
+        .edu-border {
+          text-align: center;
+          border-radius: 10px;
+          border: 2px solid $main-white;
+          h4 {
+            font-weight: 700;
+            display: inline-block;
+            margin: 47px 0;
+          }
+        }
+      }
+    }
+    .edu-des {
+      margin-top: 50px;
+      p {
+        font-size: $par-size;
+        text-align: justify;
+      }
+    }
+  }
+  .edu-space {
+    height: 50px;
   }
 }
