JS, img-scrs, footer
finished javascript for home page, added images to website and mage footer

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -8,6 +8,7 @@ $font-arvo: "Arvo", serif;
 $main-black: #222222;
 $main-black-trans: rgba(34, 34, 34, 0.3);
 $main-white: #f1f1f1;
+$main-white-trans: rgba(240, 240, 240, 0.9);
 $sec-dark: #313131;
 $sec-color: #29d4c0;
 $sec-color-title: #4a6365;
@@ -16,7 +17,6 @@ $hl-color: #b3fff6;
 $des-color: #868e96;
 
 // Font sizes
-
 $h-size: 40px;
 $subh-size: 30px;
 $par-size: 16px;
@@ -24,7 +24,6 @@ $nl-size: 20px;
 $rm-size: 16px;
 $des-size: 14px;
 $quote-size: 20px;
-
 // Transition
 
 $tr: 0.3s;
