--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,6 +31,9 @@
   padding: 0;
   list-style: none; }
 
+.display-none {
+  display: none; }
+
 .navigation {
   position: fixed;
   top: 0;
@@ -85,11 +88,14 @@
     .navigation .nav-small .nav-expanded .nav-links .nav-link a {
       display: inline-block;
       padding-left: 10px; }
-  .navigation .nav-small .nav-arrow i {
+  .navigation .nav-small .nav-arrow-container a {
     display: inline-block;
-    padding: 25px 10px;
-    color: #f1f1f1;
-    font-size: 20px; }
+    height: 100%; }
+    .navigation .nav-small .nav-arrow-container a i {
+      display: inline-block;
+      padding: 25px 10px;
+      color: #f1f1f1;
+      font-size: 20px; }
   .navigation .nav-link-active {
     background-color: #29d4c0; }
     .navigation .nav-link-active i {
@@ -109,7 +115,7 @@
         aspect-ratio: 1 / 1;
         border-radius: 50%;
         width: 100%;
-        object-fit: cover; }
+        object-fit: contain; }
     .intro-img-container .intro-content .name-wrapper {
       margin-top: 50px;
       text-align: center; }
@@ -196,6 +202,7 @@
   border-radius: 10px 10px 5px 5px; }
   .mw-card .card-img img {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.44);
+    transition: all 0.3s;
     aspect-ratio: 1 / 1;
     border-radius: 10px 10px 5px 5px;
     width: 100%;
@@ -277,5 +284,27 @@
     .footer .f-copy p {
       color: #f1f1f1;
       font-size: 14px; }
+
+.to-top {
+  position: fixed;
+  bottom: 30px;
+  right: -50px;
+  background-color: rgba(240, 240, 240, 0.9);
+  width: 30px;
+  height: 30px;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.44);
+  cursor: pointer;
+  transition: all 0.3s; }
+  .to-top i {
+    line-height: 30px;
+    font-size: 30px;
+    color: #313131; }
+
+.tt-show {
+  right: 20px !important; }
 
 /*# sourceMappingURL=index.css.map */
