--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,12 +84,16 @@
         }
       }
     }
-    .nav-arrow {
-      i {
+    .nav-arrow-container {
+      a {
         display: inline-block;
-        padding: 25px 10px;
-        color: $main-white;
-        font-size: $nl-size;
+        height: 100%;
+        i {
+          display: inline-block;
+          padding: 25px 10px;
+          color: $main-white;
+          font-size: $nl-size;
+        }
       }
     }
   }
@@ -116,7 +120,8 @@
         aspect-ratio: 1 / 1;
         border-radius: 50%;
         width: 100%;
-        object-fit: cover;
+
+        object-fit: contain;
       }
     }
     .name-wrapper {
@@ -227,6 +232,7 @@
   .card-img {
     img {
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.44);
+      transition: all $tr;
       aspect-ratio: 1 / 1;
       border-radius: 10px 10px 5px 5px;
       width: 100%;
@@ -338,4 +344,27 @@
       font-size: $des-size;
     }
   }
+}
+.to-top {
+  position: fixed;
+  bottom: 30px;
+  right: -50px;
+  background-color: $main-white-trans;
+  width: 30px;
+  height: 30px;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.44);
+  cursor: pointer;
+  transition: all $tr;
+  i {
+    line-height: 30px;
+    font-size: 30px;
+    color: $sec-dark;
+  }
+}
+.tt-show {
+  right: 20px !important;
 }
