--- a/src/scss/mywork.scss
+++ b/src/scss/mywork.scss
@@ -3,3 +3,5 @@
 @import "partials/global";
 @import "partials/header";
 @import "partials/helper";
+@import "partials/nav";
+@import "partials/footer";
